@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,45 +18,81 @@
  */
 package org.apache.pulsar.broker.authentication;
 
+import static org.apache.pulsar.broker.web.AuthenticationFilter.AuthenticatedDataAttributeName;
+import static org.apache.pulsar.broker.web.AuthenticationFilter.AuthenticatedRoleAttributeName;
+import io.opentelemetry.api.OpenTelemetry;
 import java.io.Closeable;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
-
+import java.util.Optional;
+import java.util.stream.Collectors;
 import javax.naming.AuthenticationException;
 import javax.servlet.http.HttpServletRequest;
-
+import javax.servlet.http.HttpServletResponse;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.pulsar.broker.PulsarServerException;
 import org.apache.pulsar.broker.ServiceConfiguration;
+import org.apache.pulsar.broker.web.AuthenticationFilter;
+import org.apache.pulsar.common.sasl.SaslConstants;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.collect.Maps;
-
 /**
- * Authentication service
+ * Authentication service.
  *
  */
 public class AuthenticationService implements Closeable {
     private static final Logger LOG = LoggerFactory.getLogger(AuthenticationService.class);
     private final String anonymousUserRole;
 
-    private final Map<String, AuthenticationProvider> providers = Maps.newHashMap();
+    private final Map<String, AuthenticationProvider> providers = new LinkedHashMap<>();
 
     public AuthenticationService(ServiceConfiguration conf) throws PulsarServerException {
+        this(conf, OpenTelemetry.noop());
+    }
+
+    public AuthenticationService(ServiceConfiguration conf, OpenTelemetry openTelemetry)
+            throws PulsarServerException {
         anonymousUserRole = conf.getAnonymousUserRole();
         if (conf.isAuthenticationEnabled()) {
             try {
-                AuthenticationProvider provider;
+                Map<String, List<AuthenticationProvider>> providerMap = new LinkedHashMap<>();
                 for (String className : conf.getAuthenticationProviders()) {
                     if (className.isEmpty()) {
                         continue;
                     }
-                    provider = (AuthenticationProvider) Class.forName(className).newInstance();
-                    provider.initialize(conf);
-                    providers.put(provider.getAuthMethodName(), provider);
-                    LOG.info("{} has been loaded.", className);
+                    AuthenticationProvider provider = (AuthenticationProvider) Class.forName(className)
+                            .getDeclaredConstructor().newInstance();
+
+                    List<AuthenticationProvider> providerList = providerMap.get(provider.getAuthMethodName());
+                    if (null == providerList) {
+                        providerList = new ArrayList<>(1);
+                        providerMap.put(provider.getAuthMethodName(), providerList);
+                    }
+                    providerList.add(provider);
                 }
+
+                var authenticationProviderContext = AuthenticationProvider.Context.builder()
+                        .config(conf)
+                        .openTelemetry(openTelemetry)
+                        .build();
+                for (Map.Entry<String, List<AuthenticationProvider>> entry : providerMap.entrySet()) {
+                    AuthenticationProvider provider;
+                    if (entry.getValue().size() == 1) {
+                        provider = entry.getValue().get(0);
+                    } else {
+                        provider = new AuthenticationProviderList(entry.getValue());
+                    }
+                    provider.initialize(authenticationProviderContext);
+                    providers.put(provider.getAuthMethodName(), provider);
+                    LOG.info("[{}] has been loaded.",
+                        entry.getValue().stream().map(
+                            p -> p.getClass().getName()).collect(Collectors.joining(",")));
+                }
+
                 if (providers.isEmpty()) {
                     LOG.warn("No authentication providers are loaded.");
                 }
@@ -68,27 +104,102 @@ public class AuthenticationService implements Closeable {
         }
     }
 
-    public String authenticate(AuthenticationDataSource authData, String authMethodName)
-            throws AuthenticationException {
-        AuthenticationProvider provider = providers.get(authMethodName);
-        if (provider != null) {
-            return provider.authenticate(authData);
-        } else {
-            if (StringUtils.isNotBlank(anonymousUserRole)) {
-                return anonymousUserRole;
+    private String getAuthMethodName(HttpServletRequest request) {
+        return request.getHeader(AuthenticationFilter.PULSAR_AUTH_METHOD_NAME);
+    }
+
+    private AuthenticationProvider getAuthProvider(String authMethodName) throws AuthenticationException {
+        AuthenticationProvider providerToUse = providers.get(authMethodName);
+        if (providerToUse == null) {
+            throw new AuthenticationException(
+                    String.format("Unsupported authentication method: [%s].", authMethodName));
+        }
+        return providerToUse;
+    }
+
+    public boolean authenticateHttpRequest(HttpServletRequest request, HttpServletResponse response)
+            throws Exception {
+        String authMethodName = getAuthMethodName(request);
+        if (authMethodName == null
+                && SaslConstants.SASL_TYPE_VALUE.equalsIgnoreCase(request.getHeader(SaslConstants.SASL_HEADER_TYPE))) {
+            // This edge case must be handled because the Pulsar SASL implementation does not add the
+            // X-Pulsar-Auth-Method-Name header.
+            authMethodName = SaslConstants.AUTH_METHOD_NAME;
+        }
+        if (authMethodName != null) {
+            AuthenticationProvider providerToUse = getAuthProvider(authMethodName);
+            try {
+                return providerToUse.authenticateHttpRequest(request, response);
+            } catch (Exception e) {
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("Authentication failed for provider " + providerToUse.getAuthMethodName() + " : "
+                            + e.getMessage(), e);
+                }
+                throw e;
             }
-            throw new AuthenticationException("Unsupported authentication mode: " + authMethodName);
+        } else {
+            for (AuthenticationProvider provider : providers.values()) {
+                try {
+                    return provider.authenticateHttpRequest(request, response);
+                } catch (Exception e) {
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("Authentication failed for provider " + provider.getAuthMethodName() + ": "
+                                + e.getMessage(), e);
+                    }
+                    // Ignore the exception because we don't know which authentication method is expected here.
+                }
+            }
+            // No authentication provided
+            if (!providers.isEmpty()) {
+                if (StringUtils.isNotBlank(anonymousUserRole)) {
+                    request.setAttribute(AuthenticatedRoleAttributeName, anonymousUserRole);
+                    request.setAttribute(AuthenticatedDataAttributeName, new AuthenticationDataHttps(request));
+                    return true;
+                }
+                // If at least a provider was configured, then the authentication needs to be provider
+                throw new AuthenticationException("Authentication required");
+            } else {
+                // No authentication required
+                return true;
+            }
         }
     }
 
-    public String authenticateHttpRequest(HttpServletRequest request) throws AuthenticationException {
-        // Try to validate with any configured provider
-        AuthenticationDataSource authData = new AuthenticationDataHttps(request);
-        for (AuthenticationProvider provider : providers.values()) {
+    /**
+     * @deprecated use {@link #authenticateHttpRequest(HttpServletRequest, HttpServletResponse)}
+     */
+    @Deprecated(since = "3.0.0")
+    public String authenticateHttpRequest(HttpServletRequest request, AuthenticationDataSource authData)
+            throws AuthenticationException {
+        String authMethodName = getAuthMethodName(request);
+
+        if (authMethodName != null) {
+            AuthenticationProvider providerToUse = getAuthProvider(authMethodName);
             try {
-                return provider.authenticate(authData);
-            } catch (AuthenticationException e) {
-                // Ignore the exception because we don't know which authentication method is expected here.
+                if (authData == null) {
+                    AuthenticationState authenticationState = providerToUse.newHttpAuthState(request);
+                    authData = authenticationState.getAuthDataSource();
+                }
+                // Backward compatible, the authData value was null in the previous implementation
+                return providerToUse.authenticateAsync(authData).get();
+            } catch (Exception e) {
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("Authentication failed for provider " + providerToUse.getAuthMethodName() + " : "
+                            + e.getMessage(), e);
+                }
+            }
+        } else {
+            for (AuthenticationProvider provider : providers.values()) {
+                try {
+                    AuthenticationState authenticationState = provider.newHttpAuthState(request);
+                    return provider.authenticateAsync(authenticationState.getAuthDataSource()).get();
+                } catch (Exception e) {
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("Authentication failed for provider " + provider.getAuthMethodName() + ": "
+                                + e.getMessage(), e);
+                    }
+                    // Ignore the exception because we don't know which authentication method is expected here.
+                }
             }
         }
 
@@ -103,6 +214,28 @@ public class AuthenticationService implements Closeable {
             // No authentication required
             return "<none>";
         }
+    }
+
+    /**
+     * Mark this function as deprecated, it is recommended to use a method with the AuthenticationDataSource
+     * signature to implement it.
+     * @deprecated use {@link #authenticateHttpRequest(HttpServletRequest, HttpServletResponse)}.
+     */
+    @Deprecated
+    public String authenticateHttpRequest(HttpServletRequest request) throws AuthenticationException {
+        return authenticateHttpRequest(request, (AuthenticationDataSource) null);
+    }
+
+    public AuthenticationProvider getAuthenticationProvider(String authMethodName) {
+        return providers.get(authMethodName);
+    }
+
+    // called when authn enabled, but no authentication provided
+    public Optional<String> getAnonymousUserRole() {
+        if (StringUtils.isNotBlank(anonymousUserRole)) {
+            return Optional.of(anonymousUserRole);
+        }
+        return Optional.empty();
     }
 
     @Override
